Add missing quotes

--- a/templates/config.pl.erb
+++ b/templates/config.pl.erb
@@ -21,19 +21,19 @@ $Conf{MaxOldLogFiles} = <%= @max_old_log_files %>;
 $Conf{DfPath} = "/bin/df";
 $Conf{DfCmd} = "$dfPath $topDir";
 $Conf{SplitPath} = "/usr/bin/split";
-$Conf{ParPath}   = '<%= scope['backuppc::params::par_path'] %>";
-$Conf{CatPath}   = '/bin/cat";
-$Conf{GzipPath}  = '<%= scope['backuppc::params::gzip_path'] %>";
+$Conf{ParPath}   = "<%= scope['backuppc::params::par_path'] %>";
+$Conf{CatPath}   = "/bin/cat";
+$Conf{GzipPath}  = "<%= scope['backuppc::params::gzip_path'] %>";
 $Conf{Bzip2Path} = "<%= scope['backuppc::params::bzip2_path'] %>";
 $Conf{DfMaxUsagePct} = <%= @df_max_usage_pct %>;
 $Conf{TrashCleanSleepSec} = <%= @trash_clean_sleep_sec %>;
 $Conf{DHCPAddressRanges} =  <%= PP.pp(@dhcp_address_ranges,'').chomp -%>;
 $Conf{BackupPCUser} = "backuppc";
-$Conf{TopDir}      = '<%= scope['backuppc::server::real_topdir'] %>";
-$Conf{ConfDir}     = '<%= scope['backuppc::params::config_directory'] %>";
-$Conf{LogDir}      = '<%= scope['backuppc::server::real_log_directory'] %>";
-$Conf{InstallDir}  = '<%= scope['backuppc::params::install_directory'] %>";
-$Conf{CgiDir}      = '<%= scope['backuppc::params::cgi_directory'] %>";
+$Conf{TopDir}      = "<%= scope['backuppc::server::real_topdir'] %>";
+$Conf{ConfDir}     = "<%= scope['backuppc::params::config_directory'] %>";
+$Conf{LogDir}      = "<%= scope['backuppc::server::real_log_directory'] %>";
+$Conf{InstallDir}  = "<%= scope['backuppc::params::install_directory'] %>";
+$Conf{CgiDir}      = "<%= scope['backuppc::params::cgi_directory'] %>";
 $Conf{BackupPCUserVerify} = 1;
 $Conf{HardLinkMax} = 31999;
 $Conf{PerlModuleLoad}     = undef;
@@ -206,7 +206,7 @@ $Conf{CgiAdminUsers}     = "<%= @cgi_admin_users %>";
 $Conf{CgiURL} = "<%= @cgi_url %>";
 $Conf{Language} = "<%= @language %>";
 $Conf{CgiUserHomePageCheck} = "";
-$Conf{CgiUserUrlCreate}     = 'mailto:%s";
+$Conf{CgiUserUrlCreate}     = "mailto:%s";
 $Conf{CgiDateFormatMMDD} = <%= @cgi_date_format_mmdd %>;
 $Conf{CgiNavBarAdminAllHosts} = 1;
 $Conf{CgiSearchBoxEnable} = 1;
