Fix quoting issues

--- a/templates/config.pl.erb
+++ b/templates/config.pl.erb
@@ -65,7 +65,7 @@ $Conf{XferMethod} = "rsync";
 $Conf{XferLogLevel} = 1;
 $Conf{ClientCharset} = "";
 $Conf{ClientCharsetLegacy} = "iso-8859-1";
-$Conf{SmbShareName} = "C$";
+$Conf{SmbShareName} = "C\$";
 $Conf{SmbShareUserName} = "";
 $Conf{SmbSharePasswd} = "";
 $Conf{SmbClientPath} = "/usr/bin/smbclient";
@@ -89,8 +89,8 @@ $Conf{TarClientRestoreCmd} = "$sshPath -q -x -l root $host'
        . ' -v -f - -C $shareName+";
 $Conf{TarClientPath} = "<%= scope['backuppc::params::tar_path'] %>";
 $Conf{RsyncClientPath} = "/usr/bin/rsync";
-$Conf{RsyncClientCmd} = "$sshPath -q -x -l root $host $rsyncPath $argList+';
-$Conf{RsyncClientRestoreCmd} = "$sshPath -q -x -l root $host $rsyncPath $argList+';
+$Conf{RsyncClientCmd} = "$sshPath -q -x -l root $host $rsyncPath $argList+";
+$Conf{RsyncClientRestoreCmd} = "$sshPath -q -x -l root $host $rsyncPath $argList+";
 $Conf{RsyncShareName} = "/";
 $Conf{RsyncdClientPort} = 873;
 $Conf{RsyncdUserName} = "";
