--- a/templates/client/backuppc.sh.erb
+++ b/templates/client/backuppc.sh.erb
@@ -5,7 +5,7 @@
 #
 
 case "${SSH_ORIGINAL_COMMAND}" in
-  /usr/bin/rsync*|<%= scope['backuppc::params::tar_path'] %>*<% if defined?(@system_additional_commands) and @system_additional_commands.count > 0 %>|<%= @system_additional_commands.join('*|') %>*<% end %> )
+  <%= @rsync_path %>*|<%= @tar_path %>*<% if defined?(@system_additional_commands) and @system_additional_commands.count > 0 %>|<%= @system_additional_commands.join('*|') %>*<% end %> )
   <%- if defined?(@sudo_prepend) and @sudo_prepend != '' -%>
   <%= @sudo_prepend -%> sudo ${SSH_ORIGINAL_COMMAND}
   <%- else -%>
